--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Courses </h1>
 
 <% @courses.each do |course| %>
-    <%= course.name %>
+    <%= course.name %> <%= course.created_at %>
   <% end %>
