Have user story 6 complete

--- a/app/views/golfers/index.html.erb
+++ b/app/views/golfers/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @golfers.each do |golfer| %>
   <h1><%= golfer.name %></h1>
-    <%= golfer.adult %>
-    <%= golfer.tee_time %>
-    <%= golfer.course_id %>
+    <p>Adult?:<%= golfer.adult %></p>
+    <p>Tee_time:<%=golfer.tee_time %></p>
+    <p>Course_id:<%= golfer.course_id %></p>
 <% end %>
