--- a/app/views/course_golfers/index.html.erb
+++ b/app/views/course_golfers/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Golfers", "/golfers" %>
+<%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 
 <% @golfers.each do |golfer| %>
   <p><%= golfer.name %></p>
