--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Golfers", "/golfers" %>
+<%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 <h1> Courses </h1>
 
 <% @courses.order(created_at: :desc).each do |course| %>
