--- a/app/views/golfers/index.html.erb
+++ b/app/views/golfers/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Golfers", "/golfers" %>
+<%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 
 <h1> Golfers </h1>
 
