--- a/app/views/golfers/show.html.erb
+++ b/app/views/golfers/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Golfers", "/golfers" %>
+<%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 
 <h1><%= @golfer.name %><h1>
 <%= @golfer.adult %>
