--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,6 @@
 <%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 <h1> Courses </h1>
+<%= link_to "Create Course", "/courses/new" %>
 
 <% @courses.order(created_at: :desc).each do |course| %>
    <p><%= course.name %> <%= course.created_at %></p>
