--- a/app/views/golfers/index.html.erb
+++ b/app/views/golfers/index.html.erb
@@ -1,9 +1,10 @@
 <%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 
 <h1> Golfers </h1>
+<%= link_to "New Golfer", "/golfers/new" %>
 
 <% @golfers.each do |golfer| %>
-  <h1><%= golfer.name %></h1>
+    <h1><%= golfer.name %></h1>
     <p>Adult?:<%= golfer.adult %></p>
     <p>Tee_time:<%=golfer.tee_time %></p>
     <p>Course_id:<%= golfer.course_id %></p>
