--- a/app/views/course_golfers/index.html.erb
+++ b/app/views/course_golfers/index.html.erb
@@ -1,5 +1,7 @@
 <%= link_to "Golfers", "/golfers" %> <%= link_to "Courses", "/courses" %>
 <%= link_to "Create Golfer", "/courses/#{@course.id}/golfers/new" %>
+<%= link_to "Sort Alphabetically", "/courses/#{@course.id}/golfers?sort=asc" %>
+
 <% @golfers.each do |golfer| %>
   <p><%= golfer.name %></p>
   <p><%= golfer.adult %></p>
