--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,5 +3,5 @@
 <%= link_to "Create Course", "/courses/new" %>
 
 <% @courses.newest_first.each do |course| %>
-   <p><%= course.name %> <%= course.created_at %></p> 
+   <p><%= course.name %> <%= course.created_at %><%= link_to "edit #{course.name}", "/courses/#{course.id}/edit" %></p> 
   <% end %>
