--- a/app/views/course_golfers/index.html.erb
+++ b/app/views/course_golfers/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Sort Alphabetically", "/courses/#{@course.id}/golfers?sort=asc" %>
 
 <% @golfers.each do |golfer| %>
-  <p><%= golfer.name %></p>
+  <p><%= golfer.name %><%= link_to "Edit #{golfer.name}", "/golfers/#{golfer.id}/edit" %></p>
   <p><%= golfer.adult %></p>
   <p><%= golfer.tee_time %></p>
   <p><%= golfer.course_id %></p>
